--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -772,7 +772,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>FiraCode-Light 16</string>
+			<string>Iosevka-Fixed 16</string>
 			<key>Only The Default BG Color Uses Transparency</key>
 			<false/>
 			<key>Open Toolbelt</key>
